Save maximized state

The hidden state is ignored to not overwrite when closing the window.
The state is applied via initial properties because using a binding
would create a loop and Component.onCompleted is to late.
BUG:437089