src/main.cpp
@@ -144,6 +144,9 @@ int main(int argc, char **argv)
 
     QQmlApplicationEngine engine;
     engine.rootContext()->setContextObject(new KLocalizedContext(&engine));
+    if (Configuration::globalConfig()->maximized()) {
+        engine.setInitialProperties({{"visibility", QWindow::Maximized}});
+    }
     engine.load(QUrl(QStringLiteral("qrc:/main.qml")));
 
     QObject::connect(&service, &KDBusService::activateRequested, &engine, []() {
